@@ -1,5 +1,3 @@
-require 'ohai'
-
 # Version information for the host system, kind of like a browser's user agent string.
 #
 # This could potentially be a part of `Platform` or `VERSION` but both of those are used when building the gemspec,
@@ -8,14 +6,9 @@ module Maid::UserAgent
   class << self
     # This used to be called `#to_s`, but that made things difficult when testing.
     def value
-      ohai = Ohai::System.new
-      ohai.all_plugins
-
-      maid     = "Maid/#{ ::Maid.const_get(:VERSION) }"
-      platform = "#{ ohai['platform'] }/#{ ohai['platform_version'] }"
-      ruby     = "Ruby/#{ RUBY_VERSION } #{ RUBY_PLATFORM }"
+      maid = "Maid/#{ ::Maid.const_get(:VERSION) }"
       
-      "#{ maid } (#{ platform }; #{ ruby })"
+      "#{ maid } (#{ RUBY_DESCRIPTION })"
     end
   end
 end
